--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
          RUMPIN 2026</h1>
         <p class="text-lg sm:text-xl text-white/90 mb-2 font-medium">OSN • O2SN • FLS3N • FTBI • Pentas PAI • ORTRAD</p>
         <div id="hero-date" class="text-mustard font-semibold text-lg mb-8">
-         📅 15-20 Maret 2026
+         📅 14 Februari - 4 April 2026
         </div>
         <p class="max-w-2xl mx-auto text-white/80 text-base sm:text-lg mb-10">Kompetisi bergengsi tingkat kecamatan untuk siswa-siswi Sekolah Dasar dalam bidang sains, olahraga, seni, bahasa, dan keagamaan.</p><button class="btn-primary bg-mustard hover:bg-mustardDark text-white font-bold py-4 px-10 rounded-lg text-lg shadow-lg" onclick="navigateTo('pendaftaran')"> Daftar Sekarang → </button>
        </div>
@@ -318,7 +318,7 @@
           <div class="flex items-center gap-4 p-4 bg-white rounded-lg border-l-4 border-maroon">
            <div class="text-center min-w-[80px]">
             <div class="text-sm text-gray-500">
-             15-20 Mar
+             14 Feb - 4 Apr
             </div>
             <div class="font-bold text-maroon">
              2026
@@ -668,10 +668,10 @@
     // Default Configuration
     const defaultConfig = {
       event_title: 'PESTA GEMILANG RUMPIN 2026',
-      event_date: '15-20 Maret 2026',
-      event_location: 'SDN Rumpin 01, Kec. Rumpin',
+      event_date: '14 Februari - 4 April 2026',
+      event_location: 'Kecanatan Rumpin',
       contact_phone: '0812-3456-7890',
-      contact_email: 'lomba.sdrumpin@gmail.com',
+      contact_email: 'pestagemilangrumpin@gmail.com',
       background_color: '#ffffff',
       nav_color: '#800020',
       text_color: '#1f2937',
@@ -869,4 +869,5 @@
     onConfigChange(config);
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9cd39e7c2736f936',t:'MTc3MDk3ODI5OC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+
 </html>
