--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@ transition:opacity .3s ease;
 
 <div class="flex items-center gap-4">
 
-<img src="logo-bogor.png"
+<img src="logo-bogor.webp"
      alt="Logo Kabupaten Bogor"
      class="h-14 object-contain bg-white p-1 rounded-md shadow-md">
 
-<img src="logo-sayaga.png"
+<img src="logo-sayaga.webp"
      alt="Logo SAYAGA"
      class="h-14 object-contain bg-white p-1 rounded-md shadow-md">
 
