--- a/index.html
+++ b/index.html
@@ -392,8 +392,7 @@ Form ORTRAD
    target="_blank"
    class="group relative overflow-hidden rounded-xl shadow-lg">
 
-    <img src="https://drive.google.com/file/d/1_1UjZD0fDeHyXI-UGgvm6xhDZX_nrr83/view?usp=sharing"
-         class="w-full h-[300px] object-cover group-hover:scale-110 transition duration-500">
+    <img src="thumb-osn.jpg" class="w-full h-[300px] object-cover">
 
     <div class="absolute inset-0 bg-black/40 group-hover:bg-black/60 transition flex items-center justify-center">
         <h3 class="text-white text-2xl font-bold">🔬 OSN</h3>
@@ -406,8 +405,7 @@ Form ORTRAD
    target="_blank"
    class="group relative overflow-hidden rounded-xl shadow-lg">
 
-    <img src="https://drive.google.com/uc?export=view&id=FILE_ID_THUMB_O2SN"
-         class="w-full h-[300px] object-cover group-hover:scale-110 transition duration-500">
+   <img src="thumb-o2sn.jpg" class="w-full h-[300px] object-cover">
 
     <div class="absolute inset-0 bg-black/40 group-hover:bg-black/60 transition flex items-center justify-center">
         <h3 class="text-white text-2xl font-bold">🏃 O2SN</h3>
@@ -420,8 +418,7 @@ Form ORTRAD
    target="_blank"
    class="group relative overflow-hidden rounded-xl shadow-lg">
 
-    <img src="https://drive.google.com/uc?export=view&id=FILE_ID_THUMB_FLS3N"
-         class="w-full h-[300px] object-cover group-hover:scale-110 transition duration-500">
+    <img src="thumb-fls3n.jpg" class="w-full h-[300px] object-cover">
 
     <div class="absolute inset-0 bg-black/40 group-hover:bg-black/60 transition flex items-center justify-center">
         <h3 class="text-white text-2xl font-bold">🎨 FLS3N</h3>
@@ -434,8 +431,7 @@ Form ORTRAD
    target="_blank"
    class="group relative overflow-hidden rounded-xl shadow-lg">
 
-    <img src="https://drive.google.com/uc?export=view&id=FILE_ID_THUMB_FTBI"
-         class="w-full h-[300px] object-cover group-hover:scale-110 transition duration-500">
+    <img src="thumb-ftbi.jpg" class="w-full h-[300px] object-cover">
 
     <div class="absolute inset-0 bg-black/40 group-hover:bg-black/60 transition flex items-center justify-center">
         <h3 class="text-white text-2xl font-bold">📖 FTBI</h3>
@@ -448,8 +444,7 @@ Form ORTRAD
    target="_blank"
    class="group relative overflow-hidden rounded-xl shadow-lg">
 
-    <img src="https://drive.google.com/uc?export=view&id=FILE_ID_THUMB_PAI"
-         class="w-full h-[300px] object-cover group-hover:scale-110 transition duration-500">
+    <img src="thumb-pentas-pai.jpg" class="w-full h-[300px] object-cover">
 
     <div class="absolute inset-0 bg-black/40 group-hover:bg-black/60 transition flex items-center justify-center">
         <h3 class="text-white text-2xl font-bold">🕌 Pentas PAI</h3>
@@ -462,8 +457,7 @@ Form ORTRAD
    target="_blank"
    class="group relative overflow-hidden rounded-xl shadow-lg">
 
-    <img src="https://drive.google.com/uc?export=view&id=FILE_ID_THUMB_ORTRAD"
-         class="w-full h-[300px] object-cover group-hover:scale-110 transition duration-500">
+    <img src="thumb-ortrad.jpg" class="w-full h-[300px] object-cover">
 
     <div class="absolute inset-0 bg-black/40 group-hover:bg-black/60 transition flex items-center justify-center">
         <h3 class="text-white text-2xl font-bold">🎯 ORTRAD</h3>
@@ -528,3 +522,4 @@ observer.observe(el);
 
 </body>
 </html>
+
