--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ Form ORTRAD
 <p>📞 +62 856-5915-8219</p>
 <p>✉️ pestagemilangrumpin@gmail.com</p>
 <p>📍 Kecamatan Rumpin, Kabupaten Bogor, Jawa Barat</p>
-<p class="text-gray-400 text-sm mt-6">© 2026 Panitia Pesta Gemilang Kecamatan Rumpin x PT. Alenia Arunika Raya </p>
+<p class="text-gray-400 text-sm mt-6">© 2026 PT. Alenia Arunika Raya </p>
 </footer>
 
 <script>
@@ -522,5 +522,6 @@ observer.observe(el);
 
 </body>
 </html>
+
 
 
