--- a/index.html
+++ b/index.html
@@ -316,7 +316,8 @@ Form OSN
 
 </a>
 
-<a href="#"
+<a href="https://forms.gle/29ZZapeZRpY7aAU98
+O2SN"
 class="bg-maroon text-white p-5 rounded-xl flex items-center justify-center gap-3 font-semibold hover:bg-[#5c0017] transition">
 
 <span class="text-lg">🏃</span>
@@ -324,7 +325,7 @@ Form O2SN
 
 </a>
 
-<a href="#"
+<a href="https://forms.gle/ukAJy96dAJCoa9VJA"
 class="bg-maroon text-white p-5 rounded-xl flex items-center justify-center gap-3 font-semibold hover:bg-[#5c0017] transition">
 
 <span class="text-lg">🎨</span>
@@ -348,7 +349,8 @@ Form Pentas PAI
 
 </a>
 
-<a href="#"
+<a href="ORTRAD
+https://forms.gle/HBQWhHHfXhKjD5gW9"
 class="bg-maroon text-white p-5 rounded-xl flex items-center justify-center gap-3 font-semibold hover:bg-[#5c0017] transition">
 
 <span class="text-lg">🎯</span>
@@ -522,6 +524,7 @@ observer.observe(el);
 
 </body>
 </html>
+
 
 
 
