--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ Form FTBI
 
 </a>
 
-<a href="#"
+<a href="https://forms.gle/gfE4u4Hy15BBp2yy9"
 class="bg-maroon text-white p-5 rounded-xl flex items-center justify-center gap-3 font-semibold hover:bg-[#5c0017] transition">
 
 <span class="text-lg">🕌</span>
@@ -349,8 +349,7 @@ Form Pentas PAI
 
 </a>
 
-<a href="ORTRAD
-https://forms.gle/HBQWhHHfXhKjD5gW9"
+<a href="https://forms.gle/HBQWhHHfXhKjD5gW9"
 class="bg-maroon text-white p-5 rounded-xl flex items-center justify-center gap-3 font-semibold hover:bg-[#5c0017] transition">
 
 <span class="text-lg">🎯</span>
@@ -371,12 +370,12 @@ Form ORTRAD
 
 <div class="grid md:grid-cols-2 gap-6 max-w-4xl mx-auto">
 
-<a href="https://wa.me/6285659158219" class="bg-green-500 hover:bg-green-600 text-white p-5 rounded-xl text-center font-bold">OSN – WhatsApp</a>
-<a href="https://wa.me/6285659158219" class="bg-green-500 hover:bg-green-600 text-white p-5 rounded-xl text-center font-bold">O2SN – WhatsApp</a>
-<a href="https://wa.me/6285659158219" class="bg-green-500 hover:bg-green-600 text-white p-5 rounded-xl text-center font-bold">FLS3N – WhatsApp</a>
-<a href="https://wa.me/6285659158219" class="bg-green-500 hover:bg-green-600 text-white p-5 rounded-xl text-center font-bold">FTBI – WhatsApp</a>
-<a href="https://wa.me/6285659158219" class="bg-green-500 hover:bg-green-600 text-white p-5 rounded-xl text-center font-bold">Pentas PAI – WhatsApp</a>
-<a href="https://wa.me/6285659158219" class="bg-green-500 hover:bg-green-600 text-white p-5 rounded-xl text-center font-bold">ORTRAD – WhatsApp</a>
+<a href="https://wa.me/6285718231818" class="bg-green-500 hover:bg-green-600 text-white p-5 rounded-xl text-center font-bold">OSN – WhatsApp</a>
+<a href="https://wa.me/6282299362654" class="bg-green-500 hover:bg-green-600 text-white p-5 rounded-xl text-center font-bold">O2SN – WhatsApp</a>
+<a href="https://wa.me/6285810939711" class="bg-green-500 hover:bg-green-600 text-white p-5 rounded-xl text-center font-bold">FLS3N – WhatsApp</a>
+<a href="https://wa.me/628561635647" class="bg-green-500 hover:bg-green-600 text-white p-5 rounded-xl text-center font-bold">FTBI – WhatsApp</a>
+<a href="https://wa.me/6285777930498" class="bg-green-500 hover:bg-green-600 text-white p-5 rounded-xl text-center font-bold">Pentas PAI – WhatsApp</a>
+<a href="https://wa.me/6285693928767" class="bg-green-500 hover:bg-green-600 text-white p-5 rounded-xl text-center font-bold">ORTRAD – WhatsApp</a>
 
 </div>
 
@@ -403,7 +402,7 @@ Form ORTRAD
 </a>
 
 <!-- ================= O2SN ================= -->
-<a href="https://drive.google.com/drive/folders/FOLDER_ID_O2SN"
+<a href="https://drive.google.com/drive/folders/1kbsQkvQQ55muVgP1yKPIszr8u9CZ7boH?usp=sharing"
    target="_blank"
    class="group relative overflow-hidden rounded-xl shadow-lg">
 
@@ -416,7 +415,7 @@ Form ORTRAD
 </a>
 
 <!-- ================= FLS3N ================= -->
-<a href="https://drive.google.com/drive/folders/FOLDER_ID_FLS3N"
+<a href="https://drive.google.com/drive/folders/1pMUkEgCxo88F4MqwlHDkqgLESw3ZxmHt?usp=sharing"
    target="_blank"
    class="group relative overflow-hidden rounded-xl shadow-lg">
 
@@ -429,7 +428,7 @@ Form ORTRAD
 </a>
 
 <!-- ================= FTBI ================= -->
-<a href="https://drive.google.com/drive/folders/FOLDER_ID_FTBI"
+<a href="https://drive.google.com/drive/folders/1iDTezk9d2mAb3h7WDw28fsvB2db7hSUq?usp=sharing"
    target="_blank"
    class="group relative overflow-hidden rounded-xl shadow-lg">
 
@@ -442,7 +441,7 @@ Form ORTRAD
 </a>
 
 <!-- ================= Pentas PAI ================= -->
-<a href="https://drive.google.com/drive/folders/FOLDER_ID_PAI"
+<a href="https://drive.google.com/drive/folders/1DJqw6eAMOE56R_JK4p-TZNxuzW74EY4k?usp=sharing"
    target="_blank"
    class="group relative overflow-hidden rounded-xl shadow-lg">
 
@@ -455,7 +454,7 @@ Form ORTRAD
 </a>
 
 <!-- ================= ORTRAD ================= -->
-<a href="https://drive.google.com/drive/folders/FOLDER_ID_ORTRAD"
+<a href="https://drive.google.com/drive/folders/16QCrXx0P8OuG4qoJxOIb049-UQQLQnJ7?usp=sharing"
    target="_blank"
    class="group relative overflow-hidden rounded-xl shadow-lg">
 
@@ -524,6 +523,7 @@ observer.observe(el);
 
 </body>
 </html>
+
 
 
 
