--- a/index.html
+++ b/index.html
@@ -316,8 +316,7 @@ Form OSN
 
 </a>
 
-<a href="https://forms.gle/29ZZapeZRpY7aAU98
-O2SN"
+<a href="https://forms.gle/29ZZapeZRpY7aAU98"
 class="bg-maroon text-white p-5 rounded-xl flex items-center justify-center gap-3 font-semibold hover:bg-[#5c0017] transition">
 
 <span class="text-lg">🏃</span>
@@ -523,6 +522,7 @@ observer.observe(el);
 
 </body>
 </html>
+
 
 
 
