--- a/index.html
+++ b/index.html
@@ -189,8 +189,7 @@ class="bg-yellow-100 border-l-4 border-yellow-500 text-yellow-800 px-4 md:px-6 p
                 Info Terbaru!
             </p>
             <p class="text-sm md:text-base">
-                Terjadi perubahan pada beberapa peraturan lomba. 
-                Silakan unduh kembali Juknis Pelaksanaan terbaru.
+                Terjadi perubahan pada ambang batas usia peserta, yang semula 1 januari 2015 menjadi 1 januari 2014. Silahkan unduh juknis terbaru.
             </p>
         </div>
     </div>
@@ -546,6 +545,7 @@ observer.observe(el);
 
 </body>
 </html>
+
 
 
 
